tests/cli_diagnostics/run_python_ffi_not_implemented.stderr.golden
tests/fixtures/run_python_ffi.curlee:2:12: error: python interop not implemented
  |
  |   unsafe { python_ffi.call(); }
  |            ^^^^^^^^^^^^^^^^^
